src/main/default/objects/AccountSetting__mdt/AccountSetting__mdt.object-meta.xml
<CustomObject>
    <description>Settings used for operations related to Accounts.</description>
    <label>Account Setting</label>
    <pluralLabel>Account Settings</pluralLabel>
</CustomObject>