src/main/default/objects/AccountSetting__mdt/fields/CreditStatusesOrderActiveNotAllowed__c.field-meta.xml
<CustomField>
    <fullName>CreditStatusesOrderActiveNotAllowed__c</fullName>
    <label>Statuses Preventing Order Activation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>