src/main/default/objects/AccountSetting__mdt/fields/DefaultPriceBookNames__c.field-meta.xml
<CustomField>
    <fullName>DefaultPriceBookNames__c</fullName>
    <inlineHelpText>Please insert part of the names we should look for when assigning default price books to accounts. We expect a list delimited with comas. The name has to be in format of &quot;Default England&quot;. The mapping then is linked to first word from Field Sales Region.</inlineHelpText>
    <label>Default Price Book Names</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>