src/main/default/objects/AccountSetting__mdt/fields/RolesToBeRemovedFromAccountTeam__c.field-meta.xml
<CustomField>
    <fullName>RolesToBeRemovedFromAccountTeam__c</fullName>
    <label>Roles to be Removed from Account Team</label>
    <length>255</length>
    <type>Text</type>
</CustomField>