src/main/default/objects/AccountSetting__mdt/fields/StatusesToUpdateNextDeliveryDate__c.field-meta.xml
<CustomField>
    <fullName>StatusesToUpdateNextDeliveryDate__c</fullName>
    <label>Statuses to Update Next Delivery Date</label>
    <length>255</length>
    <type>Text</type>
</CustomField>