src/main/default/objects/AccountSetting__mdt/fields/StatusesToUpdateTeamMembership__c.field-meta.xml
<CustomField>
    <fullName>StatusesToUpdateTeamMembership__c</fullName>
    <label>Statuses to Update Team Membership</label>
    <length>255</length>
    <type>Text</type>
</CustomField>