src/main/default/objects/AccountSetting__mdt/fields/StatusesToUpdateWhenNoRecentOrders__c.field-meta.xml
<CustomField>
    <fullName>StatusesToUpdateWhenNoRecentOrders__c</fullName>
    <label>Statuses to Update when No Recent Orders</label>
    <length>255</length>
    <type>Text</type>
</CustomField>