src/main/default/objects/AccountSetting__mdt/fields/StatusesWhereOrderCreationAllowed__c.field-meta.xml
<CustomField>
    <fullName>StatusesWhereOrderCreationAllowed__c</fullName>
    <label>Statuses where Order Creation Allowed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>